Sửa lỗi tọa độ
